kustomize/argo-workflows-production/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-workflows-system
  labels:
    app.kubernetes.io/part-of: playsay-release
---
apiVersion: v1
kind: Namespace
metadata:
  name: playsay-release-system
  labels:
    app.kubernetes.io/part-of: playsay-release
